<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.mpcs.scratchpad</groupId>
        <artifactId>Scratchpad</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <artifactId>core</artifactId>

    <repositories>
        <repository>
            <id>jogamp</id>
            <name>Jog Amp Repository</name>
            <url>https://jogamp.org/deployment/maven</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.joml</groupId>
            <artifactId>joml</artifactId>
            <version>1.10.5</version>
        </dependency>
        <dependency>
            <groupId>com.mpcs.scratchpad</groupId>
            <artifactId>utility</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>compile-annotation-processor</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>21</source>
                            <target>21</target>
                            <includes>
                                <include>com/mpcs/scratchpad/core/registries/annotation/RegistryAnnotationProcessor.java</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-with-annotation-processing</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>21</source>
                            <target>21</target>
                            <encoding>UTF-8</encoding>
                            <generatedSourcesDirectory>${project.build.directory}/generated-sources/</generatedSourcesDirectory>
                            <annotationProcessors>
                                <annotationProcessor>
                                    com.mpcs.scratchpad.core.registries.annotation.RegistryAnnotationProcessor
                                </annotationProcessor>
                            </annotationProcessors>
                        </configuration>

                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

</project>